<resources>
    <string name="app_name">Sushi List</string>
    <string name="sushiEntryName">Sushi name</string>
    <string name="sushiEntryAmount">Amount</string>
    <string name="sushiEntryPrice">Price</string>
    <string name="sushiEntryPieces">Pieces</string>
    <string name="infoAmountTypes">Types of sushi</string>
    <string name="infoTotalPieces">Total pieces</string>
    <string name="infoTotalPrice">Total price</string>
    <string name="menuItemAddEntry">New entry</string>
    <string name="menuItemSaveList">Save list</string>
    <string name="menuItemLoadList">Load list...</string>
    <string name="dialogTitleLoadList">Select a list to load</string>
    <string name="dialogTitleError">An error occured</string>
    <string name="dialogTitleSaveAs">Enter a name for your list</string>
    <string name="menuItemNewList">New list</string>
    <string name="menuItemSaveAs">Save list as...</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="messageEntryRemoved">Entry removed</string>
    <string name="messageEntriesRemoved">%d entries removed</string>
    <string name="actionUndo">Undo</string>
</resources>
