<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemNewList"
        android:title="@string/menuItemNewList"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuItemAdd"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menuItemAddEntry"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemSaveAs"
        android:title="@string/menuItemSaveAs"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuItemSaveList"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menuItemSaveList"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemLoadList"
        android:title="@string/menuItemLoadList"
        app:showAsAction="never" />
</menu>